# LedTester

./: .gitignore  CMakeLists.txt  build.sh
pcb/: LedTester.brd  LedTester.sch
plotter/src/: LedPlotter.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
plotter/src/LedPlotter/: LedPlotter.pro
src/: main.c
